# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  LICENSE  Pipfile  README.md  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code_analysis.yml  coverage.yml  format.yml  lint.yml  linting.yml  packaging_test.yml  security.yml  tests.yml  tox.yml
pre_commit_hook_collection/: protect_files.py
tests/: protect_files_test.py
