[metadata]
name = pre_commit_hook_collection
version = 0.1.0
description = Collection of pre commit hooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ditschi/pre-commit-hooks
author = Christian Ditscher
author_email = chris@ditscher.me
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    protect-files = pre_commit_hook_collection.protect_files:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[black]
line-length = 120

[isort]
profile = black
src_paths = pre_commit_hook_collection, tests

[flake8]
max-line-length = 120

[radon]
exclude = test_*.py
cc_min = B
mi_min = B
